# starkgame

./: Cargo.toml  README.md
src/: check_constraints.rs  fps_display.rs  main.rs  movement_air.rs  movement_trace.rs  proof_system.rs
