[package]
name = "safeplay"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = "0.15"

# Plonky3 core dependencies
p3-air = { path = "../Plonky3/air" }
p3-uni-stark = { path = "../Plonky3/uni-stark" }
p3-baby-bear = { path = "../Plonky3/baby-bear" }
p3-challenger = { path = "../Plonky3/challenger" }
p3-commit = { path = "../Plonky3/commit" }
p3-dft = { path = "../Plonky3/dft" }
p3-field = { path = "../Plonky3/field" }
p3-fri = { path = "../Plonky3/fri" }
p3-matrix = { path = "../Plonky3/matrix" }
p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
p3-symmetric = { path = "../Plonky3/symmetric" }

# Additional dependencies
rand = { version = "0.9", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
futures-lite = "2.0"
